# hac-api

./: .gitignore  LICENSE  README.md  __init__.py  file_modification.py  login.py  notification.py  pyproject.toml  setup.py
src/hacapi/: __init__.py  assignment_grades.py  assignments.py  course_grades.py  grades.py  hac.py  misc.py  payloads.py  session.py  test.py  transcript.py
