[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "hacapi"
version = "0.4.5"
authors = [
  { name="Nazchanel", email="eshaniyer@duck.com" },
]
description = "This is a simple API to access the Home Access Center (HAC)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nazchanel/hac-api"
