# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hacapi"
version = "0.5.2"
description = "This is a simple API to access the Home Access Center (HAC)"
readme = "README.md"
authors = ["Nazchanel <eshaniyer@duck.com>"]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
lxml = "^4.6.3"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.3"